# database-manager

./: README.md  alembic.ini  gui.py  pyproject.toml  table_manager.py
db_app/db_app/: asgi.py  settings.py  urls.py  wsgi.py
db_app/db_manager/: admin.py  forms.py  models.py  urls.py  views.py
db_app/db_manager/migrations/: 0001_initial.py  0002_category_alter_good_name_good_category.py  0003_alter_good_price.py  0004_alter_category_description_alter_category_name_and_more.py  0005_remove_category_description.py  0006_alter_category_options_alter_good_options.py  0007_customer.py  0008_purchase.py
db_app/db_manager/templates/: form.html  goods_manager.html  goods_table.html  index.html  manager.html  modal_delete.html  modal_edit.html  table.html
db_app/db_manager/templatetags/: table_filters.py
db_manager/db_manager/: asgi.py  settings.py  urls.py  wsgi.py
migrations/: env.py
migrations/versions/: b5459f7ca0d2_customer_model.py
models/: config.py  crud.py  schema.py
