[tool.poetry]
name = "dblw5"
version = "1.0.0"
description = "GUI to manage DB"
authors = ["JukNavozn1k <JukNavozn1k>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.29"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
